cambios notacio, ajuste repo

--- a/ejemplos_clase12.ipynb
+++ b/ejemplos_clase12.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,11 +32,14 @@
    ],
    "source": [
     "def factorial(n : int )-> int:\n",
-    "  i : int = 1\n",
+    "  # i : int = 1\n",
     "  fact : int = 1\n",
-    "  while(i <= n):\n",
+    "  # while(i <= n):\n",
+    "  #   fact *= i\n",
+    "  #   i += 1\n",
+    "  #   print(fact)\n",
+    "  for i in range(1, n+1):\n",
     "    fact *= i\n",
-    "    i += 1\n",
     "    print(fact)\n",
     "  return fact\n",
     "\n",
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,9 +78,9 @@
     "    return n*factorialRecursivo(n-1)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "  num = int(input(\"Ingrese numero: \"))\n",
-    "  factorialDeNum = factorialRecursivo(num)\n",
-    "  print(\"El factorial de \" + str(num) + \" es \" + str(factorialDeNum))"
+    "  n = int(input(\"Ingrese numero: \"))\n",
+    "  factorialDeNum = factorialRecursivo(n)\n",
+    "  print(\"El factorial de \" + str(n) + \" es \" + str(factorialDeNum))"
    ]
   },
   {
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -136,17 +139,7 @@
       "63245986\n",
       "102334155\n",
       "165580141\n",
-      "267914296\n",
-      "433494437\n",
-      "701408733\n",
-      "1134903170\n",
-      "1836311903\n",
-      "2971215073\n",
-      "4807526976\n",
-      "7778742049\n",
-      "12586269025\n",
-      "20365011074\n",
-      "La serie de Fibonacci hasta 50 es 20365011074\n"
+      "La serie de Fibonacci hasta 40 es 165580141\n"
      ]
     }
    ],
@@ -174,28 +167,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[58], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     13\u001b[0m   num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIngrese numero: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m---> 14\u001b[0m   serieFibo \u001b[38;5;241m=\u001b[39m \u001b[43mfiboRecursivo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa serie de Fibonacci hasta \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(num) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m es \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(serieFibo))\n\u001b[0;32m     16\u001b[0m   \u001b[38;5;28mprint\u001b[39m(calls)\n",
-      "Cell \u001b[1;32mIn[58], line 10\u001b[0m, in \u001b[0;36mfiboRecursivo\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      8\u001b[0m calls \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# condicion\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfiboRecursivo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m+\u001b[39mfiboRecursivo(n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[58], line 10\u001b[0m, in \u001b[0;36mfiboRecursivo\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      8\u001b[0m calls \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# condicion\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfiboRecursivo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m+\u001b[39mfiboRecursivo(n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m)\n",
-      "    \u001b[1;31m[... skipping similar frames: fiboRecursivo at line 10 (34 times)]\u001b[0m\n",
-      "Cell \u001b[1;32mIn[58], line 10\u001b[0m, in \u001b[0;36mfiboRecursivo\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m      8\u001b[0m calls \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# condicion\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m fiboRecursivo(n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[43mfiboRecursivo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La serie de Fibonacci hasta 40 es 165580141\n",
+      "165580140\n"
      ]
     }
    ],
    "source": [
     "calls = 0\n",
-    "def fiboRecursivo(n : int )-> int:\n",
+    "def fibo_recursivo(n : int )-> int:\n",
     "  global calls\n",
     "  if n < 2:\n",
     "    # caso base\n",
@@ -203,11 +189,11 @@
     "  else:\n",
     "    calls += 1\n",
     "    # condicion\n",
-    "    return fiboRecursivo(n-1)+fiboRecursivo(n-2)  \n",
+    "    return fibo_recursivo(n-1)+fibo_recursivo(n-2)  \n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "  num = int(input(\"Ingrese numero: \"))\n",
-    "  serieFibo = fiboRecursivo(num)\n",
+    "  serieFibo = fibo_recursivo(num)\n",
     "  print(\"La serie de Fibonacci hasta \" + str(num) + \" es \" + str(serieFibo))\n",
     "  print(calls)\n"
    ]
@@ -221,16 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "5\n",
-      "MCD de (10, 15) es 5\n"
+      "MCD de (10, 50) es 10\n"
      ]
     }
    ],
@@ -259,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -293,14 +277,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La suma de 10 y 12 es 22\n"
+      "La suma de 10 y 10 es 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumarDosNumeros(a : int, b : int )-> int:\n",
+    "  return a + b\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "  a = int(input(\"Ingrese numero a: \"))\n",
+    "  b = int(input(\"Ingrese numero b: \"))\n",
+    "  suma = sumarDosNumeros(a, b)\n",
+    "  print(\"La suma de \" + str(a) + \" y \" + str(b) + \" es \" + str(suma))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x000001D9850ED7E0>\n",
+      "La suma de 10 y 10 es 20\n"
      ]
     }
    ],
@@ -310,20 +319,21 @@
     "  a = int(input(\"Ingrese numero a: \"))\n",
     "  b = int(input(\"Ingrese numero b: \"))\n",
     "  sumaFuncion = lambda a, b: a + b\n",
-    "  suma = sumaFuncion(a, b)\n",
+    "  print(sumaFuncion)\n",
+    "  suma = sumaFuncion(a, b) # Evalua la funcion\n",
     "  print(\"La suma de \" + str(a) + \" y \" + str(b) + \" es \" + str(suma))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La suma de 10 y 12 es 22\n"
+      "La suma de 10 y 10 es 20\n"
      ]
     }
    ],
@@ -337,6 +347,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cuadrado de 10 es 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Llamando la función y asignando el resultado\n",
+    "if __name__ == \"__main__\":\n",
+    "  a = int(input(\"Ingrese numero a: \"))\n",
+    "  square = (lambda x: x**2)(a)\n",
+    "  print(\"El cuadrado de \" + str(a) + \" es \" + str(square))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funcion racional 27.0 es 13.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "  a = float(input(\"Ingrese numero a: \"))\n",
+    "  fun = (lambda x: x/(x**(1/3)-1))(a)\n",
+    "  print(\"Funcion racional \" + str(a) + \" es \" + str(fun))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +404,7 @@
      "output_type": "stream",
      "text": [
       "La suma de 10 y 10 es 20\n",
-      "La suma de 10 y 12 es 22\n"
+      "La suma de 10 y 20 es 30\n"
      ]
     }
    ],
@@ -379,23 +430,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La suma de dos 3\n",
-      "La suma de tres 6\n",
-      "La suma de cuatro 10\n",
-      "La suma de cinco 15\n"
+      "(0, 0)\n",
+      "La suma de dos 0\n",
+      "(0, 0, 10)\n",
+      "La suma de tres 10\n",
+      "(0, 0, 10, 5)\n",
+      "La suma de cuatro 15\n",
+      "(0, 0, 10, 5, 85)\n",
+      "La suma de cinco 100\n"
      ]
     }
    ],
    "source": [
     "def sumarNumeros(*args)-> int:\n",
     "  suma : int = 0\n",
+    "  print(args)\n",
     "  for num in args:\n",
     "    suma +=  num\n",
     "  return suma\n",
